# Opal

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
CMake/: CommonSettings.cmake  CompilerWarnings.cmake  Config.hpp.in
Sources/: CMakeLists.txt
Sources/Core/: CMakeLists.txt  Core.cpp  Core.hpp  Defines.hpp
Tests/: CMakeLists.txt  CommonTest.cpp
